--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "youtube-transcript": "^1.2.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
