--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@upstash/redis": "^1.34.8",
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.477.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
