--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript": "^1.2.1",
+    "youtube-transcript-plus": "^1.0.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
