--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@upstash/redis": "^1.34.8",
     "ai": "^4.3.10",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
@@ -49,7 +50,6 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "youtube-transcript": "^1.2.1",
     "youtube-transcript-plus": "^1.0.4",
     "zod": "^3.24.1"
   },
