--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.477.0",
     "nanoid": "^5.1.5",
     "next": "15.2.1",
@@ -51,6 +52,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript-plus": "^1.0.4",
+    "youtube-transcript-ts": "^1.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
