--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "youtube-transcript-plus": "^1.0.4",
     "youtube-transcript-ts": "^1.3.0",
+    "youtubei.js": "^13.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
