--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "next build",
     "check": "next lint && tsc --noEmit",
-    "dev": "next dev --turbopack",
+    "dev": "npx concurrently --kill-others --names \"next,trigger\" --prefix-colors \"yellow,blue\" \"next dev --turbopack\" \"npm run trigger:dev\"",
+    "trigger:dev": "npx trigger.dev@latest dev",
     "fmt": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "fmt:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "eslint .",
@@ -32,6 +33,8 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@trigger.dev/react-hooks": "^3.3.17",
+    "@trigger.dev/sdk": "^3.3.17",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
@@ -57,6 +60,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
+    "@trigger.dev/build": "^3.3.17",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/node": "^20.14.10",
     "@types/react": "19.0.10",
