--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "trigger.config.ts"
   ],
   "exclude": ["node_modules"]
 }
