--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "geist": "^1.3.0",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.477.0",
+    "motion": "^12.10.0",
     "nanoid": "^5.1.5",
     "next": "15.2.1",
     "react": "19.0.0",
