--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@ahm0xc/utils": "^0.5.5",
-    "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/google": "^2.0.13",
+    "@ai-sdk/xai": "^2.0.16",
     "@clerk/backend": "^1.31.2",
     "@clerk/nextjs": "^6.18.1",
     "@radix-ui/react-avatar": "^1.1.7",
@@ -39,7 +40,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@upstash/redis": "^1.34.8",
     "@vercel/functions": "^2.0.1",
-    "ai": "^4.3.19",
+    "ai": "^5.0.39",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,6 +58,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "youtube-transcript": "^1.2.1",
+    "youtube-transcript-plus": "^1.1.1",
     "youtube-transcript-ts": "^1.3.0",
     "youtubei.js": "^13.4.0",
     "zod": "^3.24.1"
