--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "fluid": true,
   "functions": {
-    "api/**/*.ts": { "maxDuration": 300 }
+    "src/app/api/**/*.ts": { "maxDuration": 300 }
   }
 }
